--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -663,25 +663,25 @@
                 <ul class="ul_body_bottom_section">
                     <li class="li_body_bottom_section">
                         <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_gzjsq.png")"/>
+                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_gzjsq.png")" />
                         </p>
                         <p class="p_li_body_bottom_section">工资计算器</p>
                     </li>
                     <li class="li_body_bottom_section">
                         <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_wzcx.png")"/>
+                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_wzcx.png")" />
                         </p>
                         <p class="p_li_body_bottom_section">交通违章</p>
                     </li>
                     <li class="li_body_bottom_section">
                         <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_czlcx.png")"/>
+                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_czlcx.png")" />
                         </p>
                         <p class="p_li_body_bottom_section">车质量查询</p>
                     </li>
                     <li class="li_body_bottom_section">
                         <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_yygh.png")"/>
+                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_yygh.png")" />
                         </p>
                         <p class="p_li_body_bottom_section">医院挂号</p>
                     </li>
@@ -691,91 +691,97 @@
                         </p>
                         <p class="p_li_body_bottom_section">装修计算器</p>
                     </li>
+                    <li class="li_body_bottom_section">
+                        <p class="p_li_body_bottom_section">
+                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_kdcx.png")" />
+                        </p>
+                        <p class="p_li_body_bottom_section">快递查询</p>
+                    </li>
                 </ul>
             </div>
-            <div class="div_body_bottom_section" style="padding-left: 10px; width: 304px; ">
+            <div class="div_body_bottom_section" style="padding-left: 10px; width: 304px;">
                 <p class="p_div_body_bottom_section_title">车辆出行</p>
                 <ul class="ul_body_bottom_section">
                     <li class="li_body_bottom_section">
                         <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_jsz.png")"/>
+                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_jsz.png")" />
                         </p>
                         <p class="p_li_body_bottom_section">驾驶证</p>
                     </li>
                     <li class="li_body_bottom_section">
                         <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_xsz.png")"/>
+                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_xsz.png")" />
                         </p>
                         <p class="p_li_body_bottom_section">行驶证</p>
                     </li>
                     <li class="li_body_bottom_section">
                         <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_jjz.png")"/>
+                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_jjz.png")" />
                         </p>
                         <p class="p_li_body_bottom_section">进京证</p>
                     </li>
                     <li class="li_body_bottom_section">
                         <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_xcaq.png")"/>
+                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_xcaq.png")" />
                         </p>
                         <p class="p_li_body_bottom_section">行车安全</p>
                     </li>
                     <li class="li_body_bottom_section">
                         <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_ycbk.png")"/>
+                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_ycbk.png")" />
                         </p>
                         <p class="p_li_body_bottom_section">养车百科</p>
                     </li>
                     <li class="li_body_bottom_section">
                         <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_gmgl.png")"/>
+                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_gmgl.png")" />
                         </p>
                         <p class="p_li_body_bottom_section">购买攻略</p>
                     </li>
                 </ul>
             </div>
-            <div class="div_body_bottom_section" style="padding-left: 10px; width: 304px; ">
+            <div class="div_body_bottom_section" style="padding-left: 10px; width: 304px;">
                 <p class="p_div_body_bottom_section_title">生活经验</p>
                 <ul class="ul_body_bottom_section">
                     <li class="li_body_bottom_section">
                         <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_shqm.png")"/>
+                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_shqm.png")" />
                         </p>
                         <p class="p_li_body_bottom_section">生活窍门</p>
                     </li>
                     <li class="li_body_bottom_section">
                         <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_bjgl.png")"/>
+                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_bjgl.png")" />
                         </p>
                         <p class="p_li_body_bottom_section">搬家攻略</p>
                     </li>
                     <li class="li_body_bottom_section">
                         <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_hqgl.png")"/>
+                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_hqgl.png")" />
                         </p>
                         <p class="p_li_body_bottom_section">婚庆攻略</p>
                     </li>
                     <li class="li_body_bottom_section">
                         <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_zxzs.png")"/>
+                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_zxzs.png")" />
                         </p>
                         <p class="p_li_body_bottom_section">装修装饰</p>
                     </li>
                     <li class="li_body_bottom_section">
                         <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_cyzs.png")"/>
+                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_cyzs.png")" />
                         </p>
                         <p class="p_li_body_bottom_section">创业知识</p>
                     </li>
                     <li class="li_body_bottom_section">
                         <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_cszs.png")"/>
+                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_cszs.png")" />
                         </p>
                         <p class="p_li_body_bottom_section">财税知识</p>
                     </li>
                 </ul>
             </div>
-            <div class="div_body_bottom_section" style="padding-left: 10px; width: 254px;border: none">
+            <div class="div_body_bottom_section" style="padding-left: 10px; width: 254px; border: none">
                 <p class="p_div_body_bottom_section_title">办证攻略</p>
                 <ul class="ul_body_bottom_section">
                     <li class="li_body_bottom_section">
@@ -786,37 +792,92 @@
                     </li>
                     <li class="li_body_bottom_section">
                         <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_ycbk.png")" />
+                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_syqz.png")" />
                         </p>
                         <p class="p_li_body_bottom_section">生育亲子</p>
                     </li>
                     <li class="li_body_bottom_section">
                         <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_ycbk.png")" />
+                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_sfhj.png")" />
                         </p>
                         <p class="p_li_body_bottom_section">身份户籍</p>
                     </li>
                     <li class="li_body_bottom_section">
                         <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_ycbk.png")" />
+                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_sbyl.png")" />
                         </p>
                         <p class="p_li_body_bottom_section">社保医疗</p>
                     </li>
                     <li class="li_body_bottom_section">
                         <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_ycbk.png")" />
+                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_fcjy.png")" />
                         </p>
                         <p class="p_li_body_bottom_section">房产交易</p>
                     </li>
                     <li class="li_body_bottom_section">
                         <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_ycbk.png")" />
+                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_jhlz.png")" />
                         </p>
                         <p class="p_li_body_bottom_section">结婚领证</p>
                     </li>
                 </ul>
             </div>
         </div>
+    </div>
+    <div id="div_Foot" class="div_foot">
+        <div class="div_foot_left">
+            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/logo_blue.png")" />
+        </div>
+        <div class="div_foot_right">
+            <p class="p_div_foot_right">
+                关于信息小镇
+                <ul class="ul_div_foot_right">
+                    <li class="li_div_foot_right">了解信息小镇</li>
+                    <li class="li_div_foot_right">加入信息小镇</li>
+                </ul>
+        </div>
+        <div class="div_foot_right">
+            <p class="p_div_foot_right">商户推广</p>
+            <ul class="ul_div_foot_right">
+                <li class="li_div_foot_right">VIP会员服务</li>
+                <li class="li_div_foot_right">付费推广</li>
+                <li class="li_div_foot_right">宠物专区</li>
+                <li class="li_div_foot_right">全网通</li>
+            </ul>
+        </div>
+        <div class="div_foot_right">
+            <p class="p_div_foot_right">合作加盟</p>
+            <ul class="ul_div_foot_right">
+                <li class="li_div_foot_right">市场与商务合作</li>
+                <li class="li_div_foot_right">网络品牌推广</li>
+                <li class="li_div_foot_right">城市合伙人招募</li>
+                <li class="li_div_foot_right">代理商招募</li>
+                <li class="li_div_foot_right">API合作</li>
+                <li class="li_div_foot_right">大众评审</li>
+            </ul>
+        </div>
+        <div class="div_foot_right">
+            <p class="p_div_foot_right">服务支持</p>
+            <ul class="ul_div_foot_right">
+                <li class="li_div_foot_right">渠道招商</li>
+                <li class="li_div_foot_right">先行赔付</li>
+                <li class="li_div_foot_right">诚信建设</li>
+                <li class="li_div_foot_right">举报平台</li>
+            </ul>
+        </div>
+        <div class="div_foot_right">
+            <p class="p_div_foot_right">帮助中心</p>
+            <ul class="ul_div_foot_right">
+                <li class="li_div_foot_right">常见问题</li>
+                <li class="li_div_foot_right">更多帮助</li>
+                <li class="li_div_foot_right">意见反馈</li>
+            </ul>
+        </div>
+        <p class="p_div_foot_bottom"></p>
+    </div>
+    <div class="div_bottom">
+        <p class="p_div_bottom">©2017 福建天问信息技术有限公司 客服电话：400-036-3432 | 021-6430110（周一至周日，9:00-18:00）</p>
+        <p class="p_div_bottom reduce">闽ICP备06019413号 | 闽ICP证B2-20080088 | 闽公网安备31010402000116号</p>
     </div>
 </body>
 </html>
