--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -9,10 +9,7 @@
     <meta name="viewport" content="width=device-width" />
     <title></title>
     <link href="@Url.Content("~/Areas/Business/Css/SY.css")" rel="stylesheet" />
-    <link href="@Url.Content("~/Areas/Business/Css/Common/Top.css" )" rel="stylesheet" />
-    <link href="@Url.Content("~/Areas/Business/Css/Common/XZQ.css" )" rel="stylesheet" />
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/SY.js")"></script>
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/Common/XZQ.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/SY.js")"></script>
 </head>
 <body>
     <div id="divTop" class="div_top">
@@ -23,15 +20,19 @@
         <div id="div_XZQ" class="div_dropdown">
         </div>
         <div class="div_top_right">
-            <span class="span_top_right">
-                登录/注册
+            <span id="span_dl" class="span_top_right">
+                登录
+            </span>
+            <span class="span_top_right_fg">/</span>
+            <span id="span_zc" class="span_top_right">
+                注册
             </span>
             <span class="span_top_right_split"></span>
-            <span class="span_top_right">
+            <span id="span_grzx" class="span_top_right">
                 个人中心
             </span>
             <span class="span_top_right_split"></span>
-            <span class="span_top_right">
+            <span id="span_bzzx" class="span_top_right">
                 帮助中心
             </span>
         </div>
@@ -197,7 +198,7 @@
                         <li class="li_body_middle_left_section">找人合租</li>
                         <li class="li_body_middle_left_section active">二手房</li>
                         <li class="li_body_middle_left_section">新房出售</li>
-                        <li id="liFWCZ" class="li_body_middle_left_section active">房屋出租</li>
+                        <li id="li_fwcz" class="li_body_middle_left_section active">房屋出租</li>
                     </ul>
                     <p class="p_body_middle_left_title_small">商业地产</p>
                     <ul class="ul_body_middle_left_section">
