--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ZZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ZZF.cshtml
@@ -1,41 +1,16 @@
 ﻿@{
     ViewBag.Title = "信息小镇_房产查询";
-    Layout = "~/Areas/Business/Views/Shared/_ListLayout.cshtml";
+    Layout = "~/Areas/Business/Views/Shared/QTCXLB.cshtml";
 }
-<!DOCTYPE html>
-
-<html>
-<head>
+@section Section_Head {
     <meta name="viewport" content="width=device-width" />
     <title></title>
     <link href="@Url.Content("~/Areas/Business/Css/CXLB/FCCX.css")" rel="stylesheet" />
-    <link href="@Url.Content("~/Areas/Business/Css/Common/Top.css" )" rel="stylesheet" />
-    <link href="@Url.Content("~/Areas/Business/Css/Common/XZQ.css" )" rel="stylesheet" />
+
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/CXLB/FCCX/FCCX_ZZF.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/Common/XZQ.js")"></script>
-</head>
-<body>
-    <div id="divTop" class="div_top">
-        <div class="div_top_left">
-            <span class="span_dqxzq" id="span_content_info_xzq">@ViewData["XZQ"]</span>
-            [<span class="span_qhcs" id="span_content_info_qhcs">切换城市</span>]
-        </div>
-        <div id="div_XZQ" class="div_dropdown">
-        </div>
-        <div class="div_top_right">
-            <span class="span_top_right">
-                登录/注册
-            </span>
-            <span class="span_top_right_split"></span>
-            <span class="span_top_right">
-                个人中心
-            </span>
-            <span class="span_top_right_split"></span>
-            <span class="span_top_right">
-                帮助中心
-            </span>
-        </div>
-    </div>
+}
+@section Section_Body {
     <div id="divHead" class="div_head">
         <div class="div_head_left">
             <img class="img_head_left_logo" src="@Url.Content("~/Areas/Business/Css/images/logo_blue.png")" />
@@ -67,5 +42,4 @@
             <li class="li_nav">@ViewData["XZQ"]整租房</li>
         </ul>
     </div>
-</body>
-</html>
+}
