--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -1,42 +1,13 @@
 ﻿@{
-    ViewBag.Title = "信息小镇_首页";
-    Layout = "~/Areas/Business/Views/Shared/_ListLayout.cshtml";
+    Layout = "~/Areas/Business/Views/Shared/QTCXLB.cshtml";
 }
-<!DOCTYPE html>
-
-<html>
-<head>
+@section Section_Head {
     <meta name="viewport" content="width=device-width" />
     <title></title>
     <link href="@Url.Content("~/Areas/Business/Css/SY.css")" rel="stylesheet" />
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/SY.js")"></script>
-</head>
-<body>
-    <div id="divTop" class="div_top">
-        <div class="div_top_left">
-            <span class="span_dqxzq" id="span_content_info_xzq">@ViewData["XZQ"]</span>
-            [<span class="span_qhcs" id="span_content_info_qhcs">切换城市</span>]
-        </div>
-        <div id="div_XZQ" class="div_dropdown">
-        </div>
-        <div class="div_top_right">
-            <span id="span_dl" class="span_top_right">
-                登录
-            </span>
-            <span class="span_top_right_fg">/</span>
-            <span id="span_zc" class="span_top_right">
-                注册
-            </span>
-            <span class="span_top_right_split"></span>
-            <span id="span_grzx" class="span_top_right">
-                个人中心
-            </span>
-            <span class="span_top_right_split"></span>
-            <span id="span_bzzx" class="span_top_right">
-                帮助中心
-            </span>
-        </div>
-    </div>
+}
+@section Section_Body {
     <div id="divHead" class="div_head">
         <div class="div_head_left">
             <img class="img_head_left_logo" src="@Url.Content("~/Areas/Business/Css/images/logo_blue.png")" />
@@ -688,7 +659,7 @@
                     </li>
                     <li class="li_body_bottom_section">
                         <p class="p_li_body_bottom_section">
-                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_zxjsq.png")"/>
+                            <img class="img_li_body_bottom_section" src="@Url.Content("~/Areas/Business/Css/images/sy/bmfw/sy_bmfw_zxjsq.png")" />
                         </p>
                         <p class="p_li_body_bottom_section">装修计算器</p>
                     </li>
@@ -880,5 +851,4 @@
         <p class="p_div_bottom">©2017 福建天问信息技术有限公司 客服电话：400-036-3432 | 021-6430110（周一至周日，9:00-18:00）</p>
         <p class="p_div_bottom reduce">闽ICP备06019413号 | 闽ICP证B2-20080088 | 闽公网安备31010402000116号</p>
     </div>
-</body>
-</html>
+}
