--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/QTCXLB.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/QTCXLB.cshtml
@@ -15,7 +15,31 @@
     @RenderSection("Section_Head", false)
 }
 @section Section_Body {
-
+    <div id="divTop" class="div_top">
+        <div class="div_top_left">
+            <span class="span_dqxzq" id="span_content_info_xzq">@ViewData["XZQ"]</span>
+            [<span class="span_qhcs" id="span_content_info_qhcs">切换城市</span>]
+        </div>
+        <div id="div_XZQ" class="div_dropdown">
+        </div>
+        <div class="div_top_right">
+            <span id="span_dl" class="span_top_right">
+                登录
+            </span>
+            <span class="span_top_right_fg">/</span>
+            <span id="span_zc" class="span_top_right">
+                注册
+            </span>
+            <span class="span_top_right_split"></span>
+            <span id="span_grzx" class="span_top_right">
+                个人中心
+            </span>
+            <span class="span_top_right_split"></span>
+            <span id="span_bzzx" class="span_top_right">
+                帮助中心
+            </span>
+        </div>
+    </div>
     @RenderSection("Section_Body", false)
 }
 @RenderBody()
