--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HTGL/HTGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HTGL/HTGL.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewBag.Title = "YHGL";
-    Layout = "~/Areas/Business/Views/Shared/QTCXLB.cshtml";
+    ViewBag.Title = "HTGL";
+    Layout = "~/Areas/Business/Views/Shared/Other.cshtml";
 }
 <!DOCTYPE html>
 
@@ -8,10 +8,10 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title></title>
-    <link href="@Url.Content("~/Areas/Business/Css/YHGL.css")" rel="stylesheet" />
+    <link href="@Url.Content("~/Areas/Business/Css/HTGL.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Areas/Business/Css/Common/Top.css" )" rel="stylesheet" />
     <link href="@Url.Content("~/Areas/Business/Css/Common/XZQ.css" )" rel="stylesheet" />
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/YHGL/YHGL.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTGL/HTGL.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/Common/XZQ.js")"></script>
 </head>
 <body style="width: 100%; height: 100%; overflow-x:hidden; background-color: #eeeff1;">
