--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ZZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ZZF.cshtml
@@ -34,11 +34,18 @@
     </div>
     <div id="divNav" class="div_nav">
         <ul class="ul_nav">
-            <li class="li_nav">信息小镇</li>
-            <li class="li_nav">></li>
-            <li class="li_nav">@ViewData["XZQ"]房产信息</li>
-            <li class="li_nav">></li>
-            <li class="li_nav">@ViewData["XZQ"]整租房</li>
+            <li class="li_nav_font">信息小镇</li>
+            <li class="li_nav_split">></li>
+            <li class="li_nav_font">@ViewData["XZQ"]房产信息</li>
+            <li class="li_nav_split">></li>
+            <li class="li_nav_font">@ViewData["XZQ"]整租房</li>
         </ul>
     </div>
+<div id="divCondition" class="div_condition">
+    <ul class="ul_condition_head">
+        <li id="li_condition_head_qyzf" class="li_condition_head">区域找房</li>
+        <li id="li_condition_head_dtzf" class="li_condition_head">地铁找房</li>
+        <li id="li_condition_head_xqzf" class="li_condition_head">小区找房</li>
+    </ul>
+</div>
 }
