--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/CXLB/FCCX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/CXLB/FCCX.css
@@ -21,5 +21,11 @@
 .div_head_right .span_fbxx {width: 180px;border: 1px solid #5bc0de;height: 40px;background: #5bc0de;float: left;display: inline-block;color: #fff;font-size: 16px;padding-top: 6px;text-align: center;cursor: pointer;margin-top: 10px;margin-left: 10px;}
 .div_head_right .span_fbxx:hover {background: #31b0d5;}
 
-.div_nav { width: 1200px;}
-.div_nav .ul_nav {}
+.div_nav { width: 1200px;height: 28px;display: block;}
+.div_nav .ul_nav { width: 100%;padding: 0;}
+.div_nav .ul_nav .li_nav_font{ float: left;font-size: 13px;}
+.div_nav .ul_nav .li_nav_split{ float: left;margin-left: 10px;margin-right: 10px;}
+
+.div_condition{background-color: #ffffff;display: block;width: 1200px;height: 240px;border: 1px solid #cccccc;}
+.div_condition .ul_condition_head{display: block;width: 100%;height: 40px;padding: 0;}
+.div_condition .ul_condition_head .li_condition_head{display: inline-block;float: left;text-align: center;color: #999999;font-size: 16px;width: 100px;height: 40px;padding: 8px 10px;background-color: #eeeff1;cursor: pointer;}
