--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ZZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ZZF.cshtml
@@ -41,11 +41,14 @@
             <li class="li_nav_font">@ViewData["XZQ"]整租房</li>
         </ul>
     </div>
-<div id="divCondition" class="div_condition">
-    <ul class="ul_condition_head">
-        <li id="li_condition_head_qyzf" class="li_condition_head">区域找房</li>
-        <li id="li_condition_head_dtzf" class="li_condition_head">地铁找房</li>
-        <li id="li_condition_head_xqzf" class="li_condition_head">小区找房</li>
-    </ul>
-</div>
+    <div id="divCondition" class="div_condition">
+        <ul class="ul_condition_head">
+            <li id="li_condition_head_qyzf" class="li_condition_head">区域找房</li>
+            <li id="li_condition_head_dtzf" class="li_condition_head">地铁找房</li>
+            <li id="li_condition_head_xqzf" class="li_condition_head">小区找房</li>
+        </ul>
+    </div>
+    <div id="divConditionSelect" class="div_condition_select">
+        <ul class="ul_condition_select"></ul>
+    </div>
 }
