--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ZZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ZZF.cshtml
@@ -49,6 +49,24 @@
         </ul>
     </div>
     <div id="divConditionSelect" class="div_condition_select">
-        <ul class="ul_condition_select"></ul>
+        <ul class="ul_condition_select">
+            <li class="li_condition_select_first">筛选条件</li>
+            <li class="li_condition_select"><span>仓山</span><em>x</em></li>
+            <li class="li_condition_select"><span>500-1000元</span><em>x</em></li>
+            <li class="li_condition_select"><span>整套出租</span><em>x</em></li>
+        </ul>
+    </div>
+    <div id="divBody" class="div_body">
+        <ul class="ul_body_head">
+            <li class="li_body_head">@ViewData["XZQ"]出租</li>
+            <li class="li_body_head">个人房源</li>
+            <li class="li_body_head">经纪人</li>
+            <li class="li_body_head">热租房源</li>
+            <li class="li_body_head">品牌公寓</li>
+        </ul>
+        <div id="div_body_left" class="div_body_left">
+
+        </div>
+        <div class="div_body_right"></div>
     </div>
 }
