--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/CXLB/FCCX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/CXLB/FCCX.css
@@ -42,7 +42,9 @@
 .div_condition_select .ul_condition_select .li_condition_select em{ margin-left: 10px;color: #999999;}
 
 .div_body{display: block;width: 1200px;height: 1800px;margin-top: 20px;background-color: #ffffff;}
-.div_body .ul_body_head {height: 40px;display: block;padding: 0;width: 100%;border-bottom: 2px solid #cccccc;}
-.div_body .ul_body_head .li_body_head {text-align: center;color: #999999;height: 40px;font-size: 16px;font-weight: 700;float: left;display: inline-block;padding: 6px 20px;}
+.div_body .ul_body_head {height: 40px;display: block;padding: 0;width: 100%;border-bottom: 1px solid #cccccc;}
+.div_body .ul_body_head .li_body_head {text-align: center;color: #999999;height: 40px;font-size: 16px;float: left;display: inline-block;padding: 6px 20px;}
 .div_body .ul_body_head .li_body_head:hover{ cursor: pointer;}
-.div_body .div_body_left{display: block;width: 980px;height: 1800px;}
+.div_body .div_body_left{display: block;width: 980px;height: 1760px;}
+.div_body .div_body_left .ul_body_left{ height: 100%;width: 100%;padding: 0;}
+.div_body .div_body_left .ul_body_left .li_body_left{ width: 100%;height: 180px; }
