--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ZZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_ZZF.cshtml
@@ -65,7 +65,15 @@
             <li class="li_body_head">品牌公寓</li>
         </ul>
         <div id="div_body_left" class="div_body_left">
+            <ul id="ul_body_left" class="ul_body_left">
+                <li class="li_body_left">
 
+                </li>
+            </ul>
+            <div class="div_main_info_bottom">
+                <div class="div_main_info_bottom_fy" id="div_main_info_bottom_fy">
+                </div>
+            </div>
         </div>
         <div class="div_body_right"></div>
     </div>
