--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_ZZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_ZZF.cshtml
@@ -7,7 +7,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title></title>
-    <link rel="stylesheet" href="@Url.Content("~/Areas/Business/Css/HTFB/FC/FC_ZZF.css")"/>
+    <link rel="stylesheet" href="@Url.Content("~/Areas/Business/Css/HTFB/FC/FC_ZZF.css")" />
     <link rel="stylesheet" href="@Url.Content("~/Areas/Business/Scripts/jquery-ui-1.12.1.custom/jquery-ui.min.css")" />
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/FC/FC_ZZF.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/FC/FC_ZZFYZ.js")"></script>
@@ -89,7 +89,7 @@
                         <img class="img_radio" id="img_czfs_ztcz" /><label class="label_radio">整套出租</label>
                     </div>
                     <div class="div_radio" id="div_czfs_lm">
-                        <img class="img_radio" id="img_czfs_djcz"/><label class="label_radio">单间出租</label>
+                        <img class="img_radio" id="img_czfs_djcz" /><label class="label_radio">单间出租</label>
                     </div>
                     <div id="divCZFSTip" class="Warn" style="z-index: 999; position: relative"></div>
                 </div>
@@ -103,6 +103,7 @@
                     <div class="div_select_out" style="z-index: 1000; position: relative; width: 595px; border: none;">
                         <div id="divXQMCText" class="div_select_in SRK" style="border: none;">
                             <input id="XQMC" maxlength="30" column="XQMC" class="span_spaninput SRK" style="width: 594px; margin-top: 0px; padding: 4px 12px;" type="text" placeholder="请输入小区名称" />
+                            <input id="XQDZ" column="XQDZ" type="hidden" />
                         </div>
                         <div id="divXQMClist" class="div_select_dropdown" style="width: 594px;">
                         </div>
